--- a/etl.ipynb
+++ b/etl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,9 +341,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist</th>\n",
+       "      <th>auth</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>itemInSession</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>length</th>\n",
+       "      <th>level</th>\n",
+       "      <th>location</th>\n",
+       "      <th>method</th>\n",
+       "      <th>page</th>\n",
+       "      <th>registration</th>\n",
+       "      <th>sessionId</th>\n",
+       "      <th>song</th>\n",
+       "      <th>status</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>userAgent</th>\n",
+       "      <th>userId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Des'ree</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kaylee</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>246.30812</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1540344794796</td>\n",
+       "      <td>139</td>\n",
+       "      <td>You Gotta Be</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541106106796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Mr Oizo</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kaylee</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>144.03873</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1540344794796</td>\n",
+       "      <td>139</td>\n",
+       "      <td>Flat 55</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541106352796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tamba Trio</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kaylee</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>177.18812</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1540344794796</td>\n",
+       "      <td>139</td>\n",
+       "      <td>Quem Quiser Encontrar O Amor</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541106496796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>The Mars Volta</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kaylee</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>380.42077</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1540344794796</td>\n",
+       "      <td>139</td>\n",
+       "      <td>Eriatarka</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541106673796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Infected Mushroom</td>\n",
+       "      <td>Logged In</td>\n",
+       "      <td>Kaylee</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Summers</td>\n",
+       "      <td>440.26730</td>\n",
+       "      <td>free</td>\n",
+       "      <td>Phoenix-Mesa-Scottsdale, AZ</td>\n",
+       "      <td>PUT</td>\n",
+       "      <td>NextSong</td>\n",
+       "      <td>1540344794796</td>\n",
+       "      <td>139</td>\n",
+       "      <td>Becoming Insane</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1541107053796</td>\n",
+       "      <td>\"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              artist       auth firstName gender  itemInSession lastName  \\\n",
+       "2            Des'ree  Logged In    Kaylee      F              1  Summers   \n",
+       "4            Mr Oizo  Logged In    Kaylee      F              3  Summers   \n",
+       "5         Tamba Trio  Logged In    Kaylee      F              4  Summers   \n",
+       "6     The Mars Volta  Logged In    Kaylee      F              5  Summers   \n",
+       "7  Infected Mushroom  Logged In    Kaylee      F              6  Summers   \n",
+       "\n",
+       "      length level                     location method      page  \\\n",
+       "2  246.30812  free  Phoenix-Mesa-Scottsdale, AZ    PUT  NextSong   \n",
+       "4  144.03873  free  Phoenix-Mesa-Scottsdale, AZ    PUT  NextSong   \n",
+       "5  177.18812  free  Phoenix-Mesa-Scottsdale, AZ    PUT  NextSong   \n",
+       "6  380.42077  free  Phoenix-Mesa-Scottsdale, AZ    PUT  NextSong   \n",
+       "7  440.26730  free  Phoenix-Mesa-Scottsdale, AZ    PUT  NextSong   \n",
+       "\n",
+       "    registration  sessionId                          song  status  \\\n",
+       "2  1540344794796        139                  You Gotta Be     200   \n",
+       "4  1540344794796        139                       Flat 55     200   \n",
+       "5  1540344794796        139  Quem Quiser Encontrar O Amor     200   \n",
+       "6  1540344794796        139                     Eriatarka     200   \n",
+       "7  1540344794796        139               Becoming Insane     200   \n",
+       "\n",
+       "              ts                                          userAgent  userId  \n",
+       "2  1541106106796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...       8  \n",
+       "4  1541106352796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...       8  \n",
+       "5  1541106496796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...       8  \n",
+       "6  1541106673796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...       8  \n",
+       "7  1541107053796  \"Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebK...       8  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_json(filepath, lines=True)\n",
     "filterdata = [\"NextSong\"]\n",
@@ -353,9 +539,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2   1970-01-01 00:25:41.106106796\n",
+       "4   1970-01-01 00:25:41.106352796\n",
+       "5   1970-01-01 00:25:41.106496796\n",
+       "6   1970-01-01 00:25:41.106673796\n",
+       "7   1970-01-01 00:25:41.107053796\n",
+       "Name: ts, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = pd.to_datetime(df['ts'])\n",
     "t.head()\n"
@@ -363,9 +565,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2    1970-01-01 00:25:41.106106796\n",
+       " 4    1970-01-01 00:25:41.106352796\n",
+       " 5    1970-01-01 00:25:41.106496796\n",
+       " 6    1970-01-01 00:25:41.106673796\n",
+       " 7    1970-01-01 00:25:41.107053796\n",
+       " 8    1970-01-01 00:25:41.107493796\n",
+       " 9    1970-01-01 00:25:41.107734796\n",
+       " 10   1970-01-01 00:25:41.108520796\n",
+       " 12   1970-01-01 00:25:41.109125796\n",
+       " 13   1970-01-01 00:25:41.109325796\n",
+       " 14   1970-01-01 00:25:41.110994796\n",
+       " Name: ts, dtype: datetime64[ns],\n",
+       " 2     0\n",
+       " 4     0\n",
+       " 5     0\n",
+       " 6     0\n",
+       " 7     0\n",
+       " 8     0\n",
+       " 9     0\n",
+       " 10    0\n",
+       " 12    0\n",
+       " 13    0\n",
+       " 14    0\n",
+       " Name: ts, dtype: int64,\n",
+       " 2     1\n",
+       " 4     1\n",
+       " 5     1\n",
+       " 6     1\n",
+       " 7     1\n",
+       " 8     1\n",
+       " 9     1\n",
+       " 10    1\n",
+       " 12    1\n",
+       " 13    1\n",
+       " 14    1\n",
+       " Name: ts, dtype: int64,\n",
+       " 2     1\n",
+       " 4     1\n",
+       " 5     1\n",
+       " 6     1\n",
+       " 7     1\n",
+       " 8     1\n",
+       " 9     1\n",
+       " 10    1\n",
+       " 12    1\n",
+       " 13    1\n",
+       " 14    1\n",
+       " Name: week, dtype: UInt32,\n",
+       " 2     1\n",
+       " 4     1\n",
+       " 5     1\n",
+       " 6     1\n",
+       " 7     1\n",
+       " 8     1\n",
+       " 9     1\n",
+       " 10    1\n",
+       " 12    1\n",
+       " 13    1\n",
+       " 14    1\n",
+       " Name: ts, dtype: int64,\n",
+       " 2     1970\n",
+       " 4     1970\n",
+       " 5     1970\n",
+       " 6     1970\n",
+       " 7     1970\n",
+       " 8     1970\n",
+       " 9     1970\n",
+       " 10    1970\n",
+       " 12    1970\n",
+       " 13    1970\n",
+       " 14    1970\n",
+       " Name: ts, dtype: int64,\n",
+       " 2     3\n",
+       " 4     3\n",
+       " 5     3\n",
+       " 6     3\n",
+       " 7     3\n",
+       " 8     3\n",
+       " 9     3\n",
+       " 10    3\n",
+       " 12    3\n",
+       " 13    3\n",
+       " 14    3\n",
+       " Name: ts, dtype: int64]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "timedata = [t, t.dt.hour, t.dt.day, t.dt.isocalendar().week, t.dt.month, t.dt.year, t.dt.weekday]\n",
     "timedata"
@@ -373,9 +669,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>day</th>\n",
+       "      <th>week</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1970-01-01 00:25:41.106106796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1970-01-01 00:25:41.106352796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1970-01-01 00:25:41.106496796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1970-01-01 00:25:41.106673796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1970-01-01 00:25:41.107053796</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      timestamp  hour  day  week  month  year  weekday\n",
+       "2 1970-01-01 00:25:41.106106796     0    1     1      1  1970        3\n",
+       "4 1970-01-01 00:25:41.106352796     0    1     1      1  1970        3\n",
+       "5 1970-01-01 00:25:41.106496796     0    1     1      1  1970        3\n",
+       "6 1970-01-01 00:25:41.106673796     0    1     1      1  1970        3\n",
+       "7 1970-01-01 00:25:41.107053796     0    1     1      1  1970        3"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#time_data = ()\n",
     "column_labels = ['timestamp', 'hour', 'day', 'week', 'month', 'year', 'weekday']\n",
@@ -394,12 +789,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "copy_from_stringio() done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import io\n",
+    "def copy_from_stringio(conn, time_df, table):\n",
+    "    \"\"\"\n",
+    "    Here we are going save the dataframe in memory \n",
+    "    and use copy_from() to copy it to the table\n",
+    "    \"\"\"\n",
+    "    # save dataframe to an in memory buffer\n",
+    "    buffer = io.StringIO()\n",
+    "    time_df.to_csv(buffer, index = False, header=False)\n",
+    "    buffer.seek(0)\n",
+    "    \n",
+    "    cursor = conn.cursor()\n",
+    "    try:\n",
+    "        cursor.copy_from(buffer, table, sep=\",\")\n",
+    "        conn.commit()\n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        \n",
+    "        print(\"Error: %s\" % error)\n",
+    "        conn.rollback()\n",
+    "        cursor.close()\n",
+    "        return 1\n",
+    "    print(\"copy_from_stringio() done\")\n",
+    "    cursor.close()\n",
+    "    \n",
+    "#-----------------------------------------------\n",
+    "# Main code\n",
+    "#-----------------------------------------------\n",
+    "conn = psycopg2.connect(\"host=127.0.0.1 port=5432 dbname=postgres user=postgres password=udacitytest\") # connect to the database\n",
+    "copy_from_stringio(conn, time_df, 'time') # copy the dataframe to SQL\n",
+    "#conn.close() # close the connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(time_table_insert)\n",
-    "conn.commit()"
+    "import io\n",
+    "def copy_from_stringio(conn, time_df, table):\n",
+    "    buffer = io.StringIO()\n",
+    "    time_df.to_csv(buffer, index= False, header=False)\n",
+    "    buffer.seek(0)\n",
+    "    cursor = conn.cursor()\n",
+    "    #print(buffer.read())\n",
+    "    cursor.copy_from(buffer, table, sep=\",\")\n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    \n",
+    "copy_from_stringio(conn, time_df, 'time')"
    ]
   },
   {
