--- a/test.ipynb
+++ b/test.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://postgres:***@127.0.0.1/postgres\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -205,13 +205,62 @@
        "        <th>year</th>\n",
        "        <th>weekday</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1970-01-01 00:25:41.106107</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1970-01-01 00:25:41.106353</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1970-01-01 00:25:41.106497</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1970-01-01 00:25:41.106674</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1970-01-01 00:25:41.107054</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(datetime.datetime(1970, 1, 1, 0, 25, 41, 106107), 0, 1, 1, 1, 1970, '3'),\n",
+       " (datetime.datetime(1970, 1, 1, 0, 25, 41, 106353), 0, 1, 1, 1, 1970, '3'),\n",
+       " (datetime.datetime(1970, 1, 1, 0, 25, 41, 106497), 0, 1, 1, 1, 1970, '3'),\n",
+       " (datetime.datetime(1970, 1, 1, 0, 25, 41, 106674), 0, 1, 1, 1, 1970, '3'),\n",
+       " (datetime.datetime(1970, 1, 1, 0, 25, 41, 107054), 0, 1, 1, 1, 1970, '3')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
